Mantis

02.XX.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >"developer".
 * Fixed summary page for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.
 * Removed site_settings link in print_manage_doc_menu().
 * Modified edit user links to use the username instead of the [edit] link.
 * Modified edit project links to use the project name instead of the [edit] link.
 * Modified default/config_inc1.php to have more more css global variables.

01.23.2002  -   0.17.0

 * Fixed potential problems with proxies and HTTP_REFERER not being properly sent.
 * Fixed bugnote editing to be unavailable when bug is resolved or closed.
 * Fixed viewing bugs to automatically switch projects if you view a bug from another project (often done through a link).
 * Fixed file uploads to report an error when a blank file is uploaded.
 * Fixed database and file to no longer use TIMESTAMPS.
 * Fixed password reset to blank to work for other encryption types.
 * Fixed admin_upgrade.php to honor the $g_php global.
 * Fixed access checks to see if viewer has permission to view the bug.
 * Fixed project list drop down to work even if project user list is empty.
 * Fixed advaced summary compatibility with the latest JPGraph release (1.4)
 * Modified many files for extensive use of CSS.
 * Modified BLOB field to LONGBLOB.
 * Modified bug action buttons to be more consistent.
 * Modified version string to be longer.
 * Modified html functions to consolidate code.
 * Modified confirm messages to consolidate localization strings.
 * Modified comments to use one # instead of ### (save space)