@@ -5,7 +5,8 @@ Mantis
  * Fixed missing closing span tag in view_bug_*page.php.
  * Fixed advanced summaries (jpgraph) for general statistics for all projects.
  * Fixed small problem in all localization files (for $s_reset_request_msg).
- * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >"developer".
+ * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".
+ * Fixed reporter poplist filter in buglist when users are assigned >="reporter" at a project and do not have default profile >="reporter".
  * Fixed summary page for "All projects" option
  * Fixed document links (ChangeLog, README, etc.)
  * Fixed problem where portuguese_brazil localization did not appear correctly.
